--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         />
     </head>
     <body>
-        <header class="header">
+        <header class="header container">
             <nav class="site-nav">
                 <a class="site-nav__logo link" href="./index.html"
                     >WEB<span class="accent">Studio</span></a
@@ -39,131 +39,141 @@
                 </ul>
             </address>
         </header>
-        <main>
+        <main class="main-container">
             <section class="hero">
-                <h1 class="hero__title">
-                    Effective Solutions <br />
-                    for Your Business
-                </h1>
-                <button class="hero__button" type="button">Order Service</button>
+                <div class="container">
+                    <h1 class="hero__title">
+                        Effective Solutions <br />
+                        for Your Business
+                    </h1>
+                    <button class="hero__button" type="button">Order Service</button>
+                </div>
             </section>
             <section class="values">
-                <h2 class="hidden">Our values</h2>
-                <ul class="values__list list">
-                    <li class="values__item">
-                        <h3 class="values__subtitle">Strategy</h3>
-                        <p class="values__text">
-                            Our goal is to identify the business problem to walk away with the
-                            perfect and creative solution.
-                        </p>
-                    </li>
-                    <li class="values__item">
-                        <h3 class="values__subtitle">Punctuality</h3>
-                        <p class="values__text">
-                            Bring the key message to the brand's audience for the best price within
-                            the shortest possible time.
-                        </p>
-                    </li>
-                    <li class="values__item">
-                        <h3 class="values__subtitle">Diligence</h3>
-                        <p class="values__text">
-                            Research and confirm brands that present the strongest digital growth
-                            opportunities and minimize risk.
-                        </p>
-                    </li>
-                    <li class="values__item">
-                        <h3 class="values__subtitle">Technologies</h3>
-                        <p class="values__text">
-                            Design practice focused on digital experiences. We bring forth a deep
-                            passion for problem-solving.
-                        </p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <h2 class="hidden">Our values</h2>
+                    <ul class="values__list list">
+                        <li class="values__item">
+                            <h3 class="values__subtitle">Strategy</h3>
+                            <p class="values__text">
+                                Our goal is to identify the business problem to walk away with the
+                                perfect and creative solution.
+                            </p>
+                        </li>
+                        <li class="values__item">
+                            <h3 class="values__subtitle">Punctuality</h3>
+                            <p class="values__text">
+                                Bring the key message to the brand's audience for the best price
+                                within the shortest possible time.
+                            </p>
+                        </li>
+                        <li class="values__item">
+                            <h3 class="values__subtitle">Diligence</h3>
+                            <p class="values__text">
+                                Research and confirm brands that present the strongest digital
+                                growth opportunities and minimize risk.
+                            </p>
+                        </li>
+                        <li class="values__item">
+                            <h3 class="values__subtitle">Technologies</h3>
+                            <p class="values__text">
+                                Design practice focused on digital experiences. We bring forth a
+                                deep passion for problem-solving.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </section>
-            <section class="work">
-                <h2 class="work__title">What are we doing</h2>
-                <ul class="work__list list">
-                    <li class="work__item">
-                        <img
-                            width="360"
-                            height="300"
-                            src="./images/what-are-we-doing-1.jpg"
-                            alt="a photo of a desctop"
-                        />
-                    </li>
-                    <li class="work__item">
-                        <img
-                            width="360"
-                            height="300"
-                            src="./images/what-are-we-doing-2.jpg"
-                            alt="a photo of mobile with different screens"
-                        />
-                    </li>
-                    <li class="work__item">
-                        <img
-                            width="360"
-                            height="300"
-                            src="./images/what-are-we-doing-3.jpg"
-                            alt="a photo of a male hand holding mobile"
-                        />
-                    </li>
-                </ul>
+            <section class="work container">
+                <div class="container">
+                    <h2 class="work__title">What are we doing</h2>
+                    <ul class="work__list list">
+                        <li class="work__item">
+                            <img
+                                width="360"
+                                height="300"
+                                src="./images/what-are-we-doing-1.jpg"
+                                alt="a photo of a desctop"
+                            />
+                        </li>
+                        <li class="work__item">
+                            <img
+                                width="360"
+                                height="300"
+                                src="./images/what-are-we-doing-2.jpg"
+                                alt="a photo of mobile with different screens"
+                            />
+                        </li>
+                        <li class="work__item">
+                            <img
+                                width="360"
+                                height="300"
+                                src="./images/what-are-we-doing-3.jpg"
+                                alt="a photo of a male hand holding mobile"
+                            />
+                        </li>
+                    </ul>
+                </div>
             </section>
             <section class="team">
-                <h2 class="team__title">Our Team</h2>
-                <ul class="team__list list">
-                    <li class="team__item">
-                        <img
-                            width="264"
-                            height="260"
-                            src="./images/our-team-1.jpg"
-                            alt="a photo of a team member"
-                        />
-                        <h3 class="team__subtitle">Mark Guerrero</h3>
-                        <p class="team__text">Product Designer</p>
-                    </li>
-                    <li class="team__item">
-                        <img
-                            width="264"
-                            height="260"
-                            src="./images/our-team-2.jpg"
-                            alt="a photo of a team member"
-                        />
-                        <h3 class="team__subtitle">Tom Ford</h3>
-                        <p class="team__text">Frontend Developer</p>
-                    </li>
-                    <li class="team__item">
-                        <img
-                            width="264"
-                            height="260"
-                            src="./images/our-team-3.jpg"
-                            alt="a photo of a team member"
-                        />
-                        <h3 class="team__subtitle">Camila Garcia</h3>
-                        <p class="team__text">Marketing</p>
-                    </li>
-                    <li class="team__item">
-                        <img
-                            width="264"
-                            height="260"
-                            src="./images/our-team-4.jpg"
-                            alt="a photo of a team member"
-                        />
-                        <h3 class="team__subtitle">Daniel Wilson</h3>
-                        <p class="team__text">UI Designer</p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <h2 class="team__title">Our Team</h2>
+                    <ul class="team__list list">
+                        <li class="team__item">
+                            <img
+                                width="264"
+                                height="260"
+                                src="./images/our-team-1.jpg"
+                                alt="a photo of a team member"
+                            />
+                            <h3 class="team__subtitle">Mark Guerrero</h3>
+                            <p class="team__text">Product Designer</p>
+                        </li>
+                        <li class="team__item">
+                            <img
+                                width="264"
+                                height="260"
+                                src="./images/our-team-2.jpg"
+                                alt="a photo of a team member"
+                            />
+                            <h3 class="team__subtitle">Tom Ford</h3>
+                            <p class="team__text">Frontend Developer</p>
+                        </li>
+                        <li class="team__item">
+                            <img
+                                width="264"
+                                height="260"
+                                src="./images/our-team-3.jpg"
+                                alt="a photo of a team member"
+                            />
+                            <h3 class="team__subtitle">Camila Garcia</h3>
+                            <p class="team__text">Marketing</p>
+                        </li>
+                        <li class="team__item">
+                            <img
+                                width="264"
+                                height="260"
+                                src="./images/our-team-4.jpg"
+                                alt="a photo of a team member"
+                            />
+                            <h3 class="team__subtitle">Daniel Wilson</h3>
+                            <p class="team__text">UI Designer</p>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </main>
         <footer class="footer">
-            <a class="footer__logo link" href="./index.html">
-                Web<span class="accent-footer">Studio</span></a
-            >
-            <p class="footer__text">
-                Increase the flow of customers and <br />
-                sales for your business with digital <br />
-                marketing & growth solutions.
-            </p>
+            <div class="container">
+                <a class="footer__logo link" href="./index.html">
+                    Web<span class="accent-footer">Studio</span></a
+                >
+                <p class="footer__text">
+                    Increase the flow of customers and <br />
+                    sales for your business with digital <br />
+                    marketing & growth solutions.
+                </p>
+            </div>
         </footer>
     </body>
 </html>
