--- a/portfolio.html
+++ b/portfolio.html
@@ -4,20 +4,22 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Portfolio</title>
-        <link rel="stylesheet" href="css/styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body id="portfolio">
-        <header class="header header--portfolio container">
+        <header class="header">
+            <div class="container flex-box">
             <nav class="site-nav">
-                <a class="site-nav__logo link" href="./index.html">
-                    WEB<span class="accent">Studio</span>
-                </a>
+                <a class="site-nav__logo link" href="./index.html"
+                    >WEB<span class="accent">Studio</span></a
+                >
                 <ul class="site-nav__list list">
                     <li><a class="site-nav-link link" href="./index.html">Studio</a></li>
                     <li><a class="site-nav-link link" href="./portfolio.html">Portfolio</a></li>
@@ -27,9 +29,9 @@
             <address class="adress">
                 <ul class="adress__list list">
                     <li>
-                        <a class="adress__link link" href="”mailto:info@devstudio.com”">
-                            info@devstudio.com
-                        </a>
+                        <a class="adress__link link" href="”mailto:info@devstudio.com”"
+                            >info@devstudio.com</a
+                        >
                     </li>
                     <li>
                         <a class="adress__link link" href="tel:+110001111111"
@@ -38,11 +40,12 @@
                     </li>
                 </ul>
             </address>
+        </div>
         </header>
-        <main class="portfolio">
+        <main>
             <section class="gallery">
                 <div class="container">
-                    <h1 class="hidden">Gallery</h1>
+                    <h1 class="visually-hidden">Gallery</h1>
                     <ul class="gallery__buttons-list list">
                         <li class="gallery__buttons-item">
                             <button class="gallery__button" type="button">All</button>
