--- a/index.html
+++ b/index.html
@@ -10,37 +10,40 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        />
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
         <header class="header">
             <div class="container flex-box">
-            <nav class="site-nav">
-                <a class="site-nav__logo link" href="./index.html"
-                    >WEB<span class="accent">Studio</span></a
-                >
-                <ul class="site-nav__list list">
-                    <li><a class="site-nav-link link" href="./index.html">Studio</a></li>
-                    <li><a class="site-nav-link link" href="./portfolio.html">Portfolio</a></li>
-                    <li><a class="site-nav-link link" href="">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="adress">
-                <ul class="adress__list list">
-                    <li>
-                        <a class="adress__link link" href="”mailto:info@devstudio.com”"
-                            >info@devstudio.com</a
-                        >
-                    </li>
-                    <li>
-                        <a class="adress__link link" href="tel:+110001111111"
-                            >+11 (000) 111-11-11</a
-                        >
-                    </li>
-                </ul>
-            </address>
-        </div>
+                <nav class="site-nav">
+                    <a class="site-nav__logo link" href="./index.html"
+                        >WEB<span class="accent">Studio</span></a
+                    >
+                    <ul class="site-nav__list list">
+                        <li><a class="site-nav-link link" href="./index.html">Studio</a></li>
+                        <li><a class="site-nav-link link" href="./portfolio.html">Portfolio</a></li>
+                        <li><a class="site-nav-link link" href="">Contacts</a></li>
+                    </ul>
+                </nav>
+                <address class="adress">
+                    <ul class="adress__list list">
+                        <li>
+                            <a class="adress__link link" href="”mailto:info@devstudio.com”"
+                                >info@devstudio.com</a
+                            >
+                        </li>
+                        <li>
+                            <a class="adress__link link" href="tel:+110001111111"
+                                >+11 (000) 111-11-11</a
+                            >
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </header>
         <main class="main-container">
             <section class="hero">
@@ -124,15 +127,15 @@
                     <ul class="team__list list">
                         <li class="team__item">
                             <img
-                            width="264"
-                            height="260"
-                            src="./images/our-team-1.jpg"
-                            alt="a photo of a team member"
+                                width="264"
+                                height="260"
+                                src="./images/our-team-1.jpg"
+                                alt="a photo of a team member"
                             />
                             <div class="team__content-wrapper">
-                            <h3 class="team__subtitle">Mark Guerrero</h3>
-                            <p class="team__text">Product Designer</p>
-                        </div>
+                                <h3 class="team__subtitle">Mark Guerrero</h3>
+                                <p class="team__text">Product Designer</p>
+                            </div>
                         </li>
                         <li class="team__item">
                             <img
@@ -141,8 +144,10 @@
                                 src="./images/our-team-2.jpg"
                                 alt="a photo of a team member"
                             />
-                            <h3 class="team__subtitle">Tom Ford</h3>
-                            <p class="team__text">Frontend Developer</p>
+                            <div class="team__content-wrapper">
+                                <h3 class="team__subtitle">Tom Ford</h3>
+                                <p class="team__text">Frontend Developer</p>
+                            </div>
                         </li>
                         <li class="team__item">
                             <img
@@ -151,8 +156,10 @@
                                 src="./images/our-team-3.jpg"
                                 alt="a photo of a team member"
                             />
-                            <h3 class="team__subtitle">Camila Garcia</h3>
-                            <p class="team__text">Marketing</p>
+                            <div class="team__content-wrapper">
+                                <h3 class="team__subtitle">Camila Garcia</h3>
+                                <p class="team__text">Marketing</p>
+                            </div>
                         </li>
                         <li class="team__item">
                             <img
@@ -161,8 +168,10 @@
                                 src="./images/our-team-4.jpg"
                                 alt="a photo of a team member"
                             />
-                            <h3 class="team__subtitle">Daniel Wilson</h3>
-                            <p class="team__text">UI Designer</p>
+                            <div class="team__content-wrapper">
+                                <h3 class="team__subtitle">Daniel Wilson</h3>
+                                <p class="team__text">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
