--- a/index.html
+++ b/index.html
@@ -179,14 +179,15 @@
         </main>
         <footer class="footer">
             <div class="container">
-                <a class="footer__logo link" href="./index.html">
-                    Web<span class="accent-footer">Studio</span></a
-                >
-                <p class="footer__text">
-                    Increase the flow of customers and <br />
-                    sales for your business with digital <br />
-                    marketing & growth solutions.
-                </p>
+                <div class="footer__container">
+                    <a class="footer__logo link" href="./index.html">
+                        Web<span class="accent-footer">Studio</span></a
+                    >
+                    <p class="footer__text">
+                        Increase the flow of customers and sales for your business with digital
+                        marketing & growth solutions.
+                    </p>
+                </div>
             </div>
         </footer>
     </body>
