--- a/portfolio.html
+++ b/portfolio.html
@@ -10,37 +10,40 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        />
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body id="portfolio">
         <header class="header">
             <div class="container flex-box">
-            <nav class="site-nav">
-                <a class="site-nav__logo link" href="./index.html"
-                    >WEB<span class="accent">Studio</span></a
-                >
-                <ul class="site-nav__list list">
-                    <li><a class="site-nav-link link" href="./index.html">Studio</a></li>
-                    <li><a class="site-nav-link link" href="./portfolio.html">Portfolio</a></li>
-                    <li><a class="site-nav-link link" href="">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="adress">
-                <ul class="adress__list list">
-                    <li>
-                        <a class="adress__link link" href="”mailto:info@devstudio.com”"
-                            >info@devstudio.com</a
-                        >
-                    </li>
-                    <li>
-                        <a class="adress__link link" href="tel:+110001111111"
-                            >+11 (000) 111-11-11</a
-                        >
-                    </li>
-                </ul>
-            </address>
-        </div>
+                <nav class="site-nav">
+                    <a class="site-nav__logo link" href="./index.html"
+                        >WEB<span class="accent">Studio</span></a
+                    >
+                    <ul class="site-nav__list list">
+                        <li><a class="site-nav-link link" href="./index.html">Studio</a></li>
+                        <li><a class="site-nav-link link" href="./portfolio.html">Portfolio</a></li>
+                        <li><a class="site-nav-link link" href="">Contacts</a></li>
+                    </ul>
+                </nav>
+                <address class="adress">
+                    <ul class="adress__list list">
+                        <li>
+                            <a class="adress__link link" href="”mailto:info@devstudio.com”"
+                                >info@devstudio.com</a
+                            >
+                        </li>
+                        <li>
+                            <a class="adress__link link" href="tel:+110001111111"
+                                >+11 (000) 111-11-11</a
+                            >
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </header>
         <main>
             <section class="gallery">
@@ -198,15 +201,18 @@
                 </div>
             </section>
         </main>
-        <footer class="footer container">
-            <a class="footer__logo link" href="./index.html">
-                Web<span class="accent-footer">Studio</span></a
-            >
-            <p class="footer__text">
-                Increase the flow of customers and <br />
-                sales for your business with digital <br />
-                marketing & growth solutions.
-            </p>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__container">
+                    <a class="footer__logo link" href="./index.html">
+                        Web<span class="accent-footer">Studio</span></a
+                    >
+                    <p class="footer__text">
+                        Increase the flow of customers and sales for your business with digital
+                        marketing & growth solutions.
+                    </p>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
